--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -444,7 +444,7 @@
     </section>
 
     <section class="container my-5 text-center">
-        <h3 class="mb-5" id="fqa">PREGUNTAS FRECUENTES</h3>
+        <h3 class="mb-5" id="preguntas_titulo">PREGUNTAS FRECUENTES</h3>
 
         <div class="row g-3 justify-content-center">
             <!--Pregunta 1-->
@@ -622,12 +622,6 @@
                             <a href="mailto:contactopcare@petcare.com.mx" class="contact-link">
                                 contactopcare@petcare.com.mx
                             </a>
-                        </div>
-                    </div>
-
-                    <!-- Teléfono -->
-                    <div class="col-12 col-md-4">
-                        <div class="contact-card-item">
                             <div class="contact-icon">
                                 <svg viewBox="0 0 24 24" width="18" height="18" fill="currentColor">
                                     <path
