Agregué comentarios a las fotos del carrusel

--- a/veterinaria/app/templates/index.html
+++ b/veterinaria/app/templates/index.html
@@ -145,40 +145,40 @@
                     <div class="carousel-item active" data-bs-interval="4000">
                         <img src="{% static 'img/carrusel1.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 1">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Juntos en la alegría</h5>
+                            <p>Juntos hacemos que su vida sea más feliz y saludable.</p>
                         </div>
                     </div>
 
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="{% static 'img/carrusel2.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 2">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Atención de primer nivel</h5>
+                            <p>Porque cada patita merece atención y cariño.</p>
                         </div>
                     </div>
 
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="{% static 'img/carrusel3.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 3">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Tecnología de Vanguardia</h5>
+                            <p>Contamos con equipos modernos para un diagnóstico preciso y seguro.</p>
                         </div>
                     </div>
 
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="{% static 'img/carrusel4.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 4">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Tratamientos Especializados</h5>
+                            <p>Ofrecemos soluciones adaptadas a cada necesidad de tu mascota.</p>
                         </div>
                     </div>
 
                     <div class="carousel-item" data-bs-interval="4000">
                         <img src="{% static 'img/carrusel5.jpg' %}" class="d-block w-100 carousel-img" alt="Slide 5">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Amor que Cuida</h5>
+                            <p>Cuidamos a tu mascota como parte de nuestra familia.</p>
                         </div>
                     </div>
                 </div>
