--- a/veterinaria/app/static/css/login.css
+++ b/veterinaria/app/static/css/login.css
@@ -21,7 +21,7 @@ body::before {
     position: fixed;
     inset: 0;
     opacity: .4;
-    background-image: url("../img/banner.jpg");
+    background-image: url("../img/banner_login.jpeg");
     background-size: cover;
     background-position: center;
     filter: grayscale(40%) blur(5px);
